fix overflow x on body

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -4,6 +4,7 @@ body {
   background: #fff;
   font-size: 1em;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 h1 {
